saya menambahkan code java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
         android:layout_height="49dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="Masukan angka pertama"
         android:inputType="textPersonName"
-        android:text="Masukan angka pertama"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,8 +36,8 @@
         android:layout_height="49dp"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Masukan angka kedua"
         android:inputType="textPersonName"
-        android:text="Masukan angka Kedua"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
